--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./sass/utils/_modern-normalize.scss">
+    <!-- <link rel="stylesheet" href="./sass/utils/_modern-normalize.scss"> -->
     <title>WebStudio</title>
-    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <!-- <link rel="preconnect" href="https://fonts.gstatic.com"> -->
     <link rel="stylesheet" href="./css/main.min.css">
     <!-- <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet"> -->
 </head>
@@ -445,7 +445,7 @@
             </div>
             <div class="footer-social">
                 <h3 class="footer-h3">присоединяйтесь</h3>
-                <ul class="social-list">    
+                <ul class="social-list resourse">    
                     <li class="social-icon">
                         <a href="https://instagram.com" class="social-link trans">
                             <svg class="logo-icon">
