--- a/index.html
+++ b/index.html
@@ -18,7 +18,22 @@
                     <a href="./index.html" class="logo">Web<span class="title">Studio</span>
                     </a>
                 </div>
-                
+                <button type="button" 
+                class="menu-button is-open"
+                aria-expanded="false"
+                data-menu-button>
+                    <svg 
+                        width="40" 
+                        height="40" 
+                        aria-label="Переключатель мобильного меню"
+                    >
+                        <use class="icon-close" href="./images/decoration/symbol-defs.svg#close_40px"></use>
+                        <use class="icon-menu" href="./images/decoration/symbol-defs.svg#menu_40px"></use>
+                    </svg>
+                </button>
+
+                <div class="menu-container"></div>
+
                 <ul class="site-nav list">
                     <li class="item">
                         <a href="./index.html" class="link current">Студия</a>
@@ -498,6 +513,7 @@
             </div>
         </div>        
     </footer>  
-    <script src="./js/modal.js"></script>  
+    <script src="./js/modal.js"></script> 
+    <script src="./js/menu.js"></script> 
 </body>
 </html>
