--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                                         
                                             <input class="checkbox" type="checkbox" name="topic" value="css">
                                             <span class="checkbox-icon"></span>
-                                            <span>Соглашаюсь с рассылкой и принимаю 
+                                            <span class="check-text">Соглашаюсь с рассылкой и принимаю 
                                                 <a href="" class="checkbox-text">Условия договора</a>
                                             </span>
                                         </label>
