--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 </head>
 <body>
     <!-- header -->
-    <header class="header">
-        <div class="container">
+    <header>
+        <div class="container header">
             <nav class="main-nav">
                 <div class="header-logo">
                     <a href="./index.html" class="logo">Web<span class="title">Studio</span>
@@ -237,7 +237,7 @@
             <section class="bcg-our-team">
                 <div class="container our-team">
                     <h2 class="title h2">Наша команда</h2>
-                    <ul class="pictures">
+                    <ul class="pictures-team">
                         <li class="team-list">
                             <a href="" class="workers"><img src="./images/img.jpg" alt="Product designer" width="270" height="260"></a>
                             <h3 class="title name">Игорь Демьяненко</h3>
