--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     </header>
         <main>
             <!-- Герой -->
-            <section class="container hero-page">
+            <section class=" hero-page">
                     <h1 class="hero">Эффективные решения <br>
                         для вашего бизнеса</h1>
                         <button type="button" class="btn-hero" data-modal-open>Заказать услугу</button>
